--- a/chongzhihuodong/dev/scss/style.scss
+++ b/chongzhihuodong/dev/scss/style.scss
@@ -42,6 +42,10 @@ $base:40;
 body {
   background:#4b56b5;
 }
+.m_wrapper {
+  width:16rem;
+  margin:0 auto;
+}
 .m_banner {
   width:16rem;
   height:142rem/$base;
