--- a/wjdc/dev/css/style.css
+++ b/wjdc/dev/css/style.css
@@ -167,7 +167,7 @@ a {
   left: 5.05rem;
   top: 4.7rem;
   width: 6.15rem;
-  height: 1.9rem;
+  height: 2rem;
   text-indent: -111rem;
   background: url(../images/btn_1.png) no-repeat;
   background-size: 6.15rem 8.225rem;
@@ -317,6 +317,14 @@ a {
 .m_subject .other {
   text-indent: 0;
 }
+.m_subject p {
+  line-height: 1.375rem;
+  font-size: 0.6rem;
+}
+.m_subject span {
+  color: #ff7269;
+  font-size: 0.7rem;
+}
 
 .m_submit {
   height: 4.675rem;
@@ -346,4 +354,86 @@ footer p {
   color: #8b5932;
   font-size: 0.45rem;
   line-height: 0.65rem;
+}
+
+.m_popup {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 9999;
+}
+.m_popup .m_box {
+  width: 13.5rem;
+  position: relative;
+  top: 50%;
+}
+.m_popup .z_success {
+  display: none;
+  background: url(../images/tc2.png) no-repeat;
+  background-size: 13.5rem;
+  margin: -5.75rem auto 0;
+  height: 11.525rem;
+}
+.m_popup .z_success i {
+  right: 0;
+  top: 1.5rem;
+}
+.m_popup .z_fail {
+  display: none;
+  background: url(../images/tc1.png) no-repeat;
+  background-size: 13.5rem;
+  margin: -5.275rem auto 0;
+  height: 10.575rem;
+}
+.m_popup .z_fail i {
+  right: 0;
+  top: 2.6rem;
+}
+.m_popup i {
+  position: absolute;
+  width: 1.4rem;
+  height: 1.4rem;
+}
+.m_popup a {
+  position: absolute;
+  top: 7.45rem;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+.m_popup .dt {
+  left: 1.6rem;
+}
+.m_popup .jz {
+  left: 5.6rem;
+}
+.m_popup .sx {
+  left: 9.5rem;
+}
+.m_popup a:hover {
+  background-position: 0 -2.325rem;
+}
+
+.g_showTips {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 20;
+  text-align: center;
+}
+
+.g_showTips p {
+  position: relative;
+  display: inline-block;
+  border: solid 0.08889rem #ccc;
+  background: #fff;
+  height: 0.66667rem;
+  line-height: 0.66667rem;
+  padding: 0.44444rem 0.88889rem;
+  border-radius: 0.22222rem;
 }
