--- a/wjdc/dev/scss/style.scss
+++ b/wjdc/dev/scss/style.scss
@@ -102,7 +102,7 @@ $base:40;
     left:202rem/$base;
     top:188rem/$base;
     width:246rem/$base;
-    height:76rem/$base;
+    height:80rem/$base;
     text-indent:-111rem;
     @include btn_1();
     background-position:0 -162rem/$base;
@@ -248,10 +248,12 @@ $base:40;
     text-indent:0;
   }
   p {
-
+    line-height:55rem/$base;
+    font-size:24rem/$base;
   }
   span {
-
+    color:#ff7269;
+    font-size:28rem/$base;
   }
 }
 .m_submit {
@@ -283,3 +285,83 @@ footer{
 }
 
 
+.m_popup {
+  display:none;
+  position:fixed;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+  background:rgba(0,0,0,0.6);
+  z-index:9999;
+  .m_box {
+    width:540rem/$base;
+    position:relative;
+    top:50%;
+  }
+  .z_success {
+    display: none;
+    background:url(../images/tc2.png) no-repeat;
+    background-size:540rem/$base;
+    margin:-230rem/$base auto 0;
+    height:461rem/$base;
+    i {
+      right:0;
+      top:60rem/$base;
+    }
+  }
+  .z_fail {
+    display: none;
+    background:url(../images/tc1.png) no-repeat;
+    background-size:540rem/$base;
+    margin:-211rem/$base auto 0;
+    height:423rem/$base;
+    i {
+      right:0;
+      top:104rem/$base;
+    }
+  }
+  i {
+    position:absolute;
+    width:56rem/$base;
+    height:56rem/$base;
+  }
+
+  a {
+    position:absolute;
+    top:298rem/$base;
+    width:96rem/$base;
+    height:96rem/$base;
+  }
+  .dt {
+    left:64rem/$base;
+  }
+  .jz {
+    left:224rem/$base;
+  }
+  .sx {
+    left:380rem/$base;
+  }
+  a:hover {
+    background-position:0 -93rem/$base;
+  }
+}
+.g_showTips {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 20;
+  text-align: center;
+}
+.g_showTips p {
+  position: relative;
+  display: inline-block;
+  border: solid 0.08889rem #ccc;
+  background: #fff;
+  height: 0.66667rem;
+  line-height: 0.66667rem;
+  padding: 0.44444rem 0.88889rem;
+  border-radius: 0.22222rem;
+}
