--- a/plan/dev/scss/style.scss
+++ b/plan/dev/scss/style.scss
@@ -61,7 +61,6 @@ body {
       @include sprites();
       background-position:0 0;
     }
-
   }
   .box {
     position:absolute;
@@ -460,4 +459,42 @@ body {
 
 
 
+}
+.m_popup {
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  .filter {
+    position:absolute;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    background:#000;
+    opacity:0.3;
+    filter: alpha(opacity=30);
+  }
+  .title {
+    position:relative;
+    height:47px;
+    line-height:47px;
+    text-indent:20px;
+    background:#fbfbfb;
+    border-bottom:solid 1px #ececec;
+    font-size:14px;
+    i {
+      position:absolute;
+      width:13px;
+      height:13px;
+      right:19px;
+      top:17px;
+      @include sprites();
+      background-position:0 -60px;
+    }
+  }
+  .content {
+
+  }
 }
