--- a/plan/dev/css/style.css
+++ b/plan/dev/css/style.css
@@ -307,6 +307,9 @@ body {
   text-align: center;
   padding-top: 21px;
 }
+.m_page div {
+  display: inline-block;
+}
 .m_page span, .m_page a {
   height: 36px;
   line-height: 36px;
