--- a/plan/dev/scss/style.scss
+++ b/plan/dev/scss/style.scss
@@ -264,6 +264,10 @@ body {
   height:69px;
   text-align:center;
   padding-top:21px;
+  div {
+    display: inline-block;
+  }
+
   span,a{
     height:36px;
     line-height:36px;
