--- a/wjdc/dev/scss/style.scss
+++ b/wjdc/dev/scss/style.scss
@@ -17,6 +17,9 @@ a{-webkit-user-select:none;-webkit-user-drag:none;-webkit-tap-highlight-color:rg
 .clear{clear:both}
 .fl{float:left;}
 .fr{float:right;}
+body {
+  background:#fff5d7 !important;
+}
 /*  end reset */
 $base:40;
 @mixin btn_1(){
@@ -59,6 +62,7 @@ $base:40;
       font-weight:bold;
     }
   }
+
   p {
     position:absolute;
     right:38rem/$base;
@@ -76,6 +80,30 @@ $base:40;
     background-position:-213rem/$base -237rem/$base;
   }
 }
+.m_rule {
+  height:186rem/$base;
+  div {
+    width:430rem/$base;
+    height:105rem/$base;
+    background:url(../images/rule.png) no-repeat;
+    background-size:100% auto;
+    margin:20rem/$base auto;
+    text-align:center;
+    padding:36rem/$base 30rem/$base 0 ;
+    font-size:20rem/$base;
+  }
+  i {
+    font-style:normal;
+    color:#cf8953;
+  }
+  span {
+    color:#ff7269;
+  }
+  em {
+    font-size:24rem/$base;
+    font-style:normal;
+  }
+}
 .m_b1{
   background:url(../images/banner.jpg) no-repeat;
   background-size:16rem auto;
@@ -86,21 +114,20 @@ $base:40;
   background-size:16rem auto;
 }
 .m_content {
-  background:-webkit-linear-gradient(top, #fff6d8 , #feeebb);
-  background:linear-gradient(top, #fff6d8 , #feeebb);
   section {
     position:relative;
   }
 
 }
 .m_1 {
-  height:400rem/$base;
+  width:100%;
+  height:848rem/$base;
   background:url(../images/img1.jpg) no-repeat;
-  background-size:16rem auto;
+  background-size:100% auto;
   a {
     position:absolute;
     left:202rem/$base;
-    top:188rem/$base;
+    top:0rem/$base;
     width:246rem/$base;
     height:80rem/$base;
     text-indent:-111rem;
@@ -111,24 +138,16 @@ $base:40;
     background-position:0 -243rem/$base;
   }
 }
+
 .m_2 {
-  height:508rem/$base;
-  background:url(../images/img2.jpg) no-repeat;
+  height:425rem/$base;
+  background:url(../images/img2.jpg) no-repeat 0 bottom;
   background-size:16rem auto;
-}
-.m_3 {
-  height:506rem/$base;
-  background:url(../images/img3.jpg) no-repeat;
-  background-size:16rem auto;
-}
-.m_4 {
-  height:272rem/$base;
-  background:url(../images/img4.jpg) no-repeat;
-  background-size:16rem auto;
+  padding-top:114rem/$base;
   a {
     position:absolute;
     left:150rem/$base;
-    top:158rem/$base;
+    top:0;
     width:350rem/$base;
     height:94rem/$base;
     text-indent:-111rem;
@@ -138,15 +157,10 @@ $base:40;
   a:active{
     background-position:0 -99rem/$base;
   }
-}
-.m_5 {
-  height:535rem/$base;
-  background:url(../images/img5.jpg) no-repeat;
-  background-size:16rem auto;
   ul {
     position:absolute;
     left:55rem/$base;
-    top:240rem/$base;
+    top:350rem/$base;
   }
   li {
     float:left;
@@ -174,10 +188,20 @@ $base:40;
   }
 }
 .m_subject {
-   padding:12rem/$base 56rem/$base 0;
+  padding:12rem/$base 56rem/$base 0;
   color:#73664e;
+  .window {
+    width:100%;
+    overflow:hidden;
+  }
+  .wrap {
+    transition:all 1s;
+    overflow:hidden;
+  }
   dl {
     padding-bottom:52rem/$base;
+    float:left;
+    width:13.2rem;
   }
   dt {
     line-height:38rem/$base;
@@ -189,7 +213,7 @@ $base:40;
     text-indent:50rem/$base;
     line-height:46rem/$base;
   }
-  div {
+  &>div {
     padding-top:20rem/$base;
     position:relative;
     span{
@@ -212,6 +236,7 @@ $base:40;
     border-radius:10rem/$base;
     background:transparent;
     text-indent:17rem/$base;
+    margin-left:-1.25rem;
   }
   i {
     position:absolute;
@@ -257,93 +282,142 @@ $base:40;
   }
 }
 .m_submit {
-  height:187rem/$base;
-  background:url(../images/img6.jpg) no-repeat center bottom;
-  background-size:16rem auto;
+  height: 187rem/$base;
+  background: url(../images/img6.jpg) no-repeat center bottom;
+  background-size: 16rem auto;
+  .next {
+
+    background: url(../images/btn_3.png) no-repeat;
+    background-size: 206rem/$base 170rem/$base;
+    background-position: 0 0;
+    &:active {
+      background-position: 0 -96rem/$base;
+    }
+  }
   a {
     display: block;
-    margin:0 auto;
-    width:206rem/$base;
-    height:76rem/$base;
+    width: 206rem/$base;
+    height: 74rem/$base;
+    margin: 10rem/$base auto;
+  }
+  .submit {
     @include btn_2();
-    background-position:0 -200rem/$base ;
-  }
-  a:active {
-    background-position:0 -280rem/$base;
+    background-position: 0 -200rem/$base;
+    &:active {
+      background-position: 0 -280rem/$base;
+    }
   }
 }
-footer{
-  background:#f5daa6;
-  height:77rem/$base;
+
+.m_comment {
+  padding: 0 28rem/$base 20rem/$base;
+  background: #ff9867;
+  margin: 82rem/$base 20rem/$base 26rem/$base;
+  border: solid 3rem/$base #ff6d59;
+  border-radius: 20rem/$base;
+  h4 {
+    position: relative;
+    width: 520rem/$base;
+    height: 64rem/$base;
+    line-height: 64rem/$base;
+    border-radius: 35rem/$base;
+    overflow: hidden;
+    margin: 0 auto;
+    top: -34rem/$base;
+    background: #ff725a;
+    color: #fff;
+    text-align: center;
+  }
+  h4 {
+    div {
+    }
+  }
+  .plug {
+    margin-top: -16rem/$base;
+    height: 902rem/$base;
+    background: url(../images/pl.png) no-repeat;
+    background-size: 541rem/$base auto;
+  }
+}
+
+footer {
+  background: #fff5d7;
+  overflow: hidden;
+  h4 {
+    font-size: 24rem/$base;
+    font-weight: normal;
+    color: #cf8953;
+    line-height: 66rem/$base;
+    text-align: center;
+  }
   p {
-    padding-top:10rem/$base;
-    text-align:center;
-    color:#8b5932;
-    font-size:18rem/$base;
-    line-height:26rem/$base;
+    padding: 20rem/$base;
+    text-align: center;
+    color: #8b5932;
+    font-size: 18rem/$base;
+    line-height: 26rem/$base;
+    background: #f5daa6;
   }
 }
-
-
 .m_popup {
-  display:none;
-  position:fixed;
-  left:0;
-  top:0;
-  width:100%;
-  height:100%;
-  background:rgba(0,0,0,0.6);
-  z-index:9999;
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 9999;
   .m_box {
-    width:540rem/$base;
-    position:relative;
-    top:50%;
+    width: 540rem/$base;
+    position: relative;
+    top: 50%;
   }
   .z_success {
     display: none;
-    background:url(../images/tc2.png) no-repeat;
-    background-size:540rem/$base;
-    margin:-230rem/$base auto 0;
-    height:461rem/$base;
+    background: url(../images/tc2.png) no-repeat;
+    background-size: 540rem/$base;
+    margin: -230rem/$base auto 0;
+    height: 461rem/$base;
     i {
-      right:0;
-      top:60rem/$base;
+      right: 0;
+      top: 60rem/$base;
     }
   }
   .z_fail {
     display: none;
-    background:url(../images/tc1.png) no-repeat;
-    background-size:540rem/$base;
-    margin:-211rem/$base auto 0;
-    height:423rem/$base;
+    background: url(../images/tc1.png) no-repeat;
+    background-size: 540rem/$base;
+    margin: -211rem/$base auto 0;
+    height: 423rem/$base;
     i {
-      right:0;
-      top:104rem/$base;
+      right: 0;
+      top: 104rem/$base;
     }
   }
   i {
-    position:absolute;
-    width:56rem/$base;
-    height:56rem/$base;
+    position: absolute;
+    width: 56rem/$base;
+    height: 56rem/$base;
   }
 
   a {
-    position:absolute;
-    top:298rem/$base;
-    width:96rem/$base;
-    height:96rem/$base;
+    position: absolute;
+    top: 298rem/$base;
+    width: 96rem/$base;
+    height: 96rem/$base;
   }
   .dt {
-    left:64rem/$base;
+    left: 64rem/$base;
   }
   .jz {
-    left:224rem/$base;
+    left: 224rem/$base;
   }
   .sx {
-    left:380rem/$base;
+    left: 380rem/$base;
   }
   a:hover {
-    background-position:0 -93rem/$base;
+    background-position: 0 -93rem/$base;
   }
 }
 .g_showTips {
