--- a/youyuanhui/dev/scss/style.scss
+++ b/youyuanhui/dev/scss/style.scss
@@ -967,7 +967,7 @@ footer {
   .center {
     padding:11rem/$base;
     position:relative;
-    margin:100rem/$base 30rem/$base ;
+    margin:0 30rem/$base ;
     background:#fee65f;
     border-radius:20rem/$base;
     box-shadow:0  5rem/$base  0 0 #fcb23f;
