--- a/youyuanhui/dev/css/style.css
+++ b/youyuanhui/dev/css/style.css
@@ -1017,7 +1017,7 @@ footer dl dd {
 .popQuan .center {
   padding: 0.275rem;
   position: relative;
-  margin: 2.5rem 0.75rem;
+  margin: 0 0.75rem;
   background: #fee65f;
   border-radius: 0.5rem;
   box-shadow: 0 0.125rem 0 0 #fcb23f;
